AC_INIT([LValue], [0.1], [vladimir.rudoy@gmail.com], [lvalue], [http://my-gsoc.blogspot.com/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define subdir-objects])
AM_PATH_CPPUNIT(1.12.1)
AC_CONFIG_HEADERS([config.h])
AC_LANG(C++)
AC_PROG_CXX([g++])
AC_PROG_CC([gcc])
AM_PROG_LEX
AC_PROG_YACC
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
